changes in dropdown type

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -16,7 +16,6 @@
     "noEmit": true,
     "jsx": "react-jsx"
   },
-  "ignoreBuildErrors": true,
-  "include": ["src"],
+  "include": ["src/**/*"],
   "references": [{ "path": "./tsconfig.node.json" }]
 }
